--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Estilos/Apuntes.sty
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Estilos/Apuntes.sty
@@ -72,10 +72,10 @@
 \renewcommand{\ps@myheadings}{%
               \renewcommand{\@evenhead}{%
                             \hss\vbox{%
-                            \emph{Higher School of Enineering\hfill University of Cádiz}}}
+                            \emph{Faculty of Engeneering\hfill University of Cádiz}}}
               \renewcommand{\@oddhead}{%
                             \hss\vbox{%
-                            \emph{Fantasy\hfill Stimey}}}
+                            \emph{Stimey\hfill Fantasy}}}
               \renewcommand{\@oddfoot}{\hfill\normalsize\rm\thepage\hfill}
               \renewcommand\@evenfoot{{\hfill\normalsize\rm\thepage\hfill}}}
 %%
