Presentación de los niños de pinf

--- a/4 GII/2do Semestre/PINF/Fantasy/Documento de plan de proyecto/Documento de plan de proyecto.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documento de plan de proyecto/Documento de plan de proyecto.tex
@@ -109,7 +109,7 @@
 	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
 
 \section{Visión general}
-Este documento recoge la planificación, el planteamiento y el principio de un proyecto al que hemos denominado ``Fantasy'', un portal web en el que los profesores pueden realizar una serie de tareas (fantasías) con el objetivo de que los alumnos puedan jugarlas y así aprendan de forma creativa.
+Este documento recoge la planificación, el planteamiento y el principio de un proyecto al que hemos denominado ``\textbf{Fantasy}'', un portal web en el que los profesores pueden realizar una serie de tareas (fantasías) con el objetivo de que los alumnos puedan jugarlas y así aprendan de forma creativa.
 
 Los alumnos, también tendrán la posibilidad de crear las fantasías que el profesor les mande como trabajo y luego serán evaluadas por dicho profesor.
 
@@ -157,7 +157,18 @@ Cuando está implementada una funcionalidad y testeada tanto por el grupo de pro
 \begin{enumerate}
 	\item Finalización de front-end.
 	\item Migraciones finales de la base de datos.
-	\item Creación de puntos activos.
+	\item Finalización de la creación de fantasías.
+\end{enumerate}
+
+\subsection{Sprint 4 (10 de abril al 24 de abril)}
+\begin{enumerate}
+	\item Finalización de las migraciones de la base de datos.
+	\item Creación de puntos activos con sus características básicas.
+\end{enumerate}
+
+\subsection{Sprint 5 (24 de abril al 1 de mayo)}
+\begin{enumerate}
+	\item Creación de puntos activos con todas sus caracterísitcas.
 \end{enumerate}
 
 
@@ -191,6 +202,18 @@ Cuando está implementada una funcionalidad y testeada tanto por el grupo de pro
 \begin{enumerate}
 	\item Finalización del sprint 2.
 	\item Comienzo del sprint 3.
+\end{enumerate}
+
+\subsection{Reunión 5 (10 de abril)}
+\begin{enumerate}
+	\item Finalización del sprint 3.
+	\item Comienzo del sprint 4.
+\end{enumerate}
+
+\subsection{Reunión 6 (24 de abril)}
+\begin{enumerate}
+	\item Finalización del sprint 4.
+	\item Comienzo del sprint 5.
 \end{enumerate}
 
 \end{document}
